--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit colors="true" bootstrap="tests/bootstrap.php">
+<phpunit bootstrap="tests/unit/bootstrap.php" colors="false">
+	<!-- These constants help setup environment configurations for running optional tests.
+	<php>
+		<const name="JTEST_DATABASE_MYSQL_DSN" value="host=localhost;dbname=xap_ut;user=utuser;pass=ut1234" />
+		<const name="JTEST_DATABASE_MYSQLI_DSN" value="host=localhost;dbname=xap_ut;user=utuser;pass=ut1234" />
+	</php>
+	-->
+
 	<testsuites>
-		<testsuite name="XiveIRM - next GNR CRM">
-			<directory>tests/XiveIRM</directory>
+		<testsuite name="Xive-Application-Platform">
+			<directory>tests/unit</directory>
+		</testsuite>
+		<testsuite name="installer">
+			<directory>tests/unit/components</directory>
+		</testsuite>
+		<testsuite name="libraries">
+			<directory>tests/unit/plugins</directory>
 		</testsuite>
 	</testsuites>
+
 	<logging>
-		<log type="coverage-html" target="build/coverage" title="Code coverage" charset="UTF-8" yui="true" highlight="true" />
+		<log type="coverage-html" target="build/coverage" title="XAP-Core" charset="UTF-8" yui="true" highlight="true" lowUpperBound="35" highLowerBound="70" />
 		<log type="coverage-clover" target="build/logs/clover.xml" />
 		<log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false" />
 	</logging>
+
 	<filter>
 		<whitelist addUncoveredFilesFromWhitelist="true">
-			<directory suffix=".php">PHP</directory>
 		</whitelist>
 	</filter>
 </phpunit>
