update for XiveIRM

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ php:
 
 before_script:
   - phpenv rehash
-  - mysql -e 'create database xap_ut;'
-  - mysql xap_ut < tests/unit/database/mysql.sql
+  - mysql -e 'create database xirm_ut;'
+  - mysql xirm_ut < tests/unit/database/mysql.sql
 
 script:
   - phpunit --configuration travisci-phpunit.xml
