--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,13 +2,13 @@
 <phpunit bootstrap="tests/unit/bootstrap.php" colors="false">
 	<!-- These constants help setup environment configurations for running optional tests.
 	<php>
-		<const name="JTEST_DATABASE_MYSQL_DSN" value="host=localhost;dbname=xap_ut;user=utuser;pass=ut1234" />
-		<const name="JTEST_DATABASE_MYSQLI_DSN" value="host=localhost;dbname=xap_ut;user=utuser;pass=ut1234" />
+		<const name="JTEST_DATABASE_MYSQL_DSN" value="host=localhost;dbname=xirm_ut;user=utuser;pass=ut1234" />
+		<const name="JTEST_DATABASE_MYSQLI_DSN" value="host=localhost;dbname=xirm_ut;user=utuser;pass=ut1234" />
 	</php>
 	-->
 
 	<testsuites>
-		<testsuite name="Xive-Application-Platform">
+		<testsuite name="XiveIRM">
 			<directory>tests/unit</directory>
 		</testsuite>
 		<testsuite name="installer">
